# cpp-sketch

./: .clangd  .gitignore  CMakeLists.txt
src/calc/: calc.cpp  calc.h
src/core/: main.cpp
